Global font styles

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8' />
     <title>Daily Planner</title>
     <!--<link rel='shortcut icon' href='' type='image/x-icon' />-->
+    <meta name='viewport' content='width=device-width' />
     <link href='https://fonts.googleapis.com/css?family=Lato:300,600' rel='stylesheet' />
     <link href='../node_modules/minimal.css/minimal.css' rel='stylesheet' />
   </head>
