Add simple icon

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
     <title>Daily Planner</title>
     <!--<link rel='shortcut icon' href='' type='image/x-icon' />-->
     <meta name='viewport' content='width=device-width' />
+    <meta name='apple-mobile-web-app-capable' content='yes' />
+    <link rel='shortcut icon' href='./assets/icon.png' />
+    <link rel='apple-touch-icon' href='./assets/icon.png' />
     <link href='https://fonts.googleapis.com/css?family=Lato:300,600' rel='stylesheet' />
     <link href='../node_modules/minimal.css/minimal.css' rel='stylesheet' />
   </head>
